replaced deprecated URL constructor with URI#create/URI#toURL() system + added log messages for verbosity